--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@clerk/nextjs": "^6.11.0",
     "@hookform/resolvers": "^4.1.2",
     "@prisma/client": "^6.5.0",
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -24,11 +25,13 @@
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "pg": "^8.13.3",
+    "query-string": "^9.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
